--- a/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
+++ b/AutoRest/Generators/Python/Azure.Python/AutoRest.Generator.Azure.Python.csproj
@@ -38,6 +38,7 @@
     </Compile>
     <Compile Include="TemplateModels\AzureMethodGroupTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureModelInitTemplateModel.cs" />
+    <Compile Include="TemplateModels\AzureModelTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureServiceClientTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureMethodTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureParameterTemplateModel.cs" />
