Added generic JSON flattening converter

--- a/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
+++ b/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
@@ -30,6 +30,8 @@
       <Link>AutoRest.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Compile Include="Helpers.cs" />
+    <Compile Include="MappingTests.cs" />
     <Compile Include="ExtensionsTests.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
