Updates based on design review

--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
@@ -51,6 +51,7 @@
         "System.Runtime.Extensions": "",
         "System.Runtime.Serialization": "",
         "System.Text.Encoding": "",
+        "System.Text.RegularExpressions": "",
         "System.Threading": "",
         "System.Threading.Tasks": "",
         "System.Xml": "",
