--- a/AutoRest/Generators/Extensions/Extensions/AutoRest.Generator.Extensions.csproj
+++ b/AutoRest/Generators/Extensions/Extensions/AutoRest.Generator.Extensions.csproj
@@ -26,6 +26,7 @@
     </Compile>
     <Compile Include="ClientModelHelpers.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
