--- a/AutoRest/Generators/Python/Python/AutoRest.Generator.Python.csproj
+++ b/AutoRest/Generators/Python/Python/AutoRest.Generator.Python.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Templates\ServiceClientInitTemplate.cs">
       <DependentUpon>ServiceClientInitTemplate.cshtml</DependentUpon>
     </Compile>
+	<Compile Include="Templates\VersionTemplate.cs">
+      <DependentUpon>VersionTemplate.cshtml</DependentUpon>
+    </Compile>
     <None Include="Templates\CredentialTemplate.cshtml" />
     <None Include="Templates\ExceptionTemplate.cshtml" />
     <None Include="Templates\SetupTemplate.cshtml" />
@@ -90,6 +93,7 @@
     <None Include="Templates\ServiceClientTemplate.cshtml" />
     <None Include="Templates\ServiceClientInitTemplate.cshtml" />
     <None Include="Templates\MethodTemplate.cshtml" />
+	<None Include="Templates\VersionTemplate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
