--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: csharp
-sudo: false
+sudo: required
+dist: trusty
+env:
+  matrix:
+  - DNX_VERSION=1.0.0-rc1-final DNX_USER_HOME=~/.dnx
 mono:
-  - beta
+- beta
+os:
+- linux
+- osx
 addons:
   apt:
     sources:
@@ -15,15 +22,22 @@ addons:
     - lib32z1
     # packages for python
     - python3.5
+    # Packages for DNX 
+    - gettext
+    - libcurl4-openssl-dev
+    - libicu-dev
+    - libssl-dev
+    - libunwind8
+    - zlib1g
 install:
-  # Install libunwind required for DNX
-  - wget http://download.savannah.gnu.org/releases/libunwind/libunwind-1.1.tar.gz
-  - tar xzvf libunwind-1.1.tar.gz
-  - libunwind-1.1/configure --prefix=$HOME/.local
-  - make && make install
-  - export LD_LIBRARY_PATH=$HOME/.local/lib/:$LD_LIBRARY_PATH
+  # Install DNVM
+  - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | DNX_USER_HOME=$DNX_USER_HOME
+    DNX_BRANCH=v$DNX_VERSION sh
+  - source $DNX_USER_HOME/dnvm/dnvm.sh
+  - dnvm upgrade
+  - dnvm install $DNX_VERSION -r mono
+  - dnvm install $DNX_VERSION -r coreclr -alias default
   # Install npm
-  - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
   - npm install -g npm@'>=1.4.3'
   - npm install
   # Install ruby dependencies
@@ -37,9 +51,6 @@ install:
   - echo y | ./android/android-sdk-linux/tools/android update sdk --all --filter platform-tools,android-23,build-tools-23.0.1,extra-android-support,extra-android-m2repository,extra-google-m2repository --no-ui --force
   - export ANDROID_HOME=`pwd`/android/android-sdk-linux
 script:
-  - dnvm install 1.0.0-rc1-final -r mono
-  - dnvm install 1.0.0-rc1-final -r coreclr
-  - dnvm use 1.0.0-rc1-final -r coreclr -persistent
   - gulp
 after_script:
   - echo "========== Server log: ============"
