Added support for ClientName on properties. Added unit tests for client properties and parameters.

--- a/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
+++ b/AutoRest/Generators/Extensions/Extensions.Tests/AutoRest.Generator.Extensions.Tests.csproj
@@ -38,6 +38,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Swagger\swagger-x-ms-client-name.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Swagger\swagger-x-ms-client-flatten.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
