--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   - export LD_LIBRARY_PATH=$HOME/.local/lib/:$LD_LIBRARY_PATH
   # Install npm
   - curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install 4
   - npm install -g npm@'>=1.4.3'
   - npm install
   # Install ruby dependencies
