--- a/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
+++ b/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
@@ -32,6 +32,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="ScopeProvider.cs" />
+    <Compile Include="Types\IJavaType.cs" />
+    <Compile Include="Types\JavaDictionaryType.cs" />
+    <Compile Include="Types\JavaEnumType.cs" />
+    <Compile Include="Types\JavaSequenceType.cs" />
+    <Compile Include="Types\JavaCompositeType.cs" />
+    <Compile Include="Types\JavaPrimaryType.cs" />
     <Compile Include="TemplateModels\PackageInfoTemplateModel.cs" />
     <Compile Include="TemplateModels\EnumTemplateModel.cs" />
     <Compile Include="TemplateModels\MethodGroupTemplateModel.cs" />
