--- a/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
+++ b/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
@@ -66,7 +66,8 @@
     <Compile Include="Templates\AzureServiceClientRetrofitTemplate.cs">
       <DependentUpon>AzureServiceClientRetrofitTemplate.cshtml</DependentUpon>
     </Compile>
-    <Compile Include="Types\AzureJavaCompositeType.cs" />
+    <Compile Include="TypeModels\AzureCompositeTypeModel.cs" />
+    <Compile Include="TypeModels\AzureResponseModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
