--- a/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
+++ b/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
@@ -32,14 +32,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="ScopeProvider.cs" />
-    <Compile Include="Types\ResponseModel.cs" />
-    <Compile Include="Types\ParameterModel.cs" />
-    <Compile Include="Types\ITypeModel.cs" />
-    <Compile Include="Types\DictionaryTypeModel.cs" />
-    <Compile Include="Types\EnumTypeModel.cs" />
-    <Compile Include="Types\SequenceTypeModel.cs" />
-    <Compile Include="Types\CompositeTypeModel.cs" />
-    <Compile Include="Types\PrimaryTypeModel.cs" />
+    <Compile Include="TypeModels\ResponseModel.cs" />
+    <Compile Include="TypeModels\ParameterModel.cs" />
+    <Compile Include="TypeModels\ITypeModel.cs" />
+    <Compile Include="TypeModels\DictionaryTypeModel.cs" />
+    <Compile Include="TypeModels\EnumTypeModel.cs" />
+    <Compile Include="TypeModels\SequenceTypeModel.cs" />
+    <Compile Include="TypeModels\CompositeTypeModel.cs" />
+    <Compile Include="TypeModels\PrimaryTypeModel.cs" />
     <Compile Include="TemplateModels\PackageInfoTemplateModel.cs" />
     <Compile Include="TemplateModels\EnumTemplateModel.cs" />
     <Compile Include="TemplateModels\MethodGroupTemplateModel.cs" />
