--- a/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
+++ b/AutoRest/Generators/Java/Java/AutoRest.Generator.Java.csproj
@@ -32,6 +32,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="ScopeProvider.cs" />
+    <Compile Include="TypeModels\PropertyModel.cs" />
     <Compile Include="TypeModels\ResponseModel.cs" />
     <Compile Include="TypeModels\ParameterModel.cs" />
     <Compile Include="TypeModels\ITypeModel.cs" />
