Adding a Swagger version compare tool.

--- a/AutoRest/AutoRest.Core/AutoRest.Core.csproj
+++ b/AutoRest/AutoRest.Core/AutoRest.Core.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoRest.cs" />
+    <Compile Include="BaseSettings.cs" />
     <Compile Include="ClientModel\CollectionFormat.cs" />
     <Compile Include="ClientModel\EnumValue.cs" />
     <Compile Include="ClientModel\EnumType.cs" />
