1. Adding more validation and comparison logic. 2. Moving a public class, ValidationContext, to its own file.

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -30,6 +30,7 @@
     <Compile Include="JsonConverters\ResponseRefConverter.cs" />
     <Compile Include="Model\Header.cs" />
     <Compile Include="Model\CodeGenerationSettings.cs" />
+    <Compile Include="Model\ValidationContext.cs" />
     <Compile Include="ObjectBuilder.cs" />
     <Compile Include="OperationBuilder.cs" />
     <Compile Include="SchemaBuilder.cs" />
