Fixed up the settings.targets file

--- a/Tools/AutoRest.Settings.targets
+++ b/Tools/AutoRest.Settings.targets
@@ -98,12 +98,15 @@
     <Copy Condition=" '$(OS)' == 'Windows_NT'"
           SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).xml;$(ProjectDir)$(OutputPath)$(AssemblyName).pdb"
           DestinationFolder="$(_BinariesDirectory)"/>
-    <Copy Condition=" '$(OS)' != 'Windows_NT' and $(AssemblyName) != 'AutoRest'"
+    <Copy Condition=" '$(OS)' != 'Windows_NT' and $(AssemblyName) != 'AutoRest' and $(AssemblyName) != 'VersionCompare'"
           SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).xml;$(ProjectDir)$(OutputPath)$(AssemblyName).dll.mdb"
           DestinationFolder="$(_BinariesDirectory)"/>
     <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe.mdb"
-          Condition="'$(OS)' != 'Windows_NT' and $(AssemblyName) == 'AutoRest' "
+          Condition="'$(OS)' != 'Windows_NT' and $(AssemblyName) == 'AutoRest'"
           DestinationFolder="$(_CodeSignDirectory)"/>
+    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe.mdb"
+          Condition="'$(OS)' != 'Windows_NT' and $(AssemblyName) == 'VersionCompare'"
+          DestinationFolder="$(_CodeSignDirectory)"/>		  
     <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).dll"
           Condition="Exists('$(ProjectDir)$(OutputPath)$(AssemblyName).dll')"
           DestinationFolder="$(_CodeSignDirectory)"/>
