--- a/Tools/AutoRest.Settings.targets
+++ b/Tools/AutoRest.Settings.targets
@@ -98,15 +98,12 @@
     <Copy Condition=" '$(OS)' == 'Windows_NT'"
           SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).xml;$(ProjectDir)$(OutputPath)$(AssemblyName).pdb"
           DestinationFolder="$(_BinariesDirectory)"/>
-    <Copy Condition=" '$(OS)' != 'Windows_NT' and $(AssemblyName) != 'AutoRest' and $(AssemblyName) != 'VersionCompare'"
+    <Copy Condition=" '$(OS)' != 'Windows_NT' and $(AssemblyName) != 'AutoRest'"
           SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).xml;$(ProjectDir)$(OutputPath)$(AssemblyName).dll.mdb"
           DestinationFolder="$(_BinariesDirectory)"/>
     <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe.mdb"
           Condition="'$(OS)' != 'Windows_NT' and $(AssemblyName) == 'AutoRest'"
           DestinationFolder="$(_CodeSignDirectory)"/>
-    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe.mdb"
-          Condition="'$(OS)' != 'Windows_NT' and $(AssemblyName) == 'VersionCompare'"
-          DestinationFolder="$(_CodeSignDirectory)"/>		  
     <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).dll"
           Condition="Exists('$(ProjectDir)$(OutputPath)$(AssemblyName).dll')"
           DestinationFolder="$(_CodeSignDirectory)"/>
@@ -116,13 +113,6 @@
           DestinationFolder="$(_BinariesDirectory)"/>
     <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe"
           Condition=" $(AssemblyName) == 'AutoRest' "
-          DestinationFolder="$(_CodeSignDirectory)"/>
-    <!-- VersionCompare.exe specific files -->
-    <Copy SourceFiles="@(_AutoRestBinaries)"
-          Condition=" $(AssemblyName) == 'VersionCompare' "
-          DestinationFolder="$(_BinariesDirectory)"/>
-    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe"
-          Condition=" $(AssemblyName) == 'VersionCompare' "
           DestinationFolder="$(_CodeSignDirectory)"/>
   </Target>
 
