Android license split into 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ install:
   # Install android SDK
   - mkdir android
   - wget -qO- "http://dl.google.com/android/android-sdk_r23.0.2-linux.tgz" | tar -zxv -C ./android
-  - echo y | ./android/android-sdk-linux/tools/android update sdk --all --filter platform-tools,android-23,build-tools-23.0.1,extra-android-support,extra-android-m2repository,extra-google-m2repository --no-ui --force
+  - echo y | ./android/android-sdk-linux/tools/android update sdk --all --filter platform-tools,android-23,build-tools-23.0.1 --no-ui --force
+  - echo y | ./android/android-sdk-linux/tools/android update sdk --all --filter extra-android-support,extra-android-m2repository,extra-google-m2repository --no-ui --force
   - export ANDROID_HOME=`pwd`/android/android-sdk-linux
 script:
   - dnvm install 1.0.0-rc1-final -r mono
