--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.2.0",
+  "version": "4.0.0",
   "copyright": "Copyright (c) Microsoft Corporation",
   "iconUrl": "http://go.microsoft.com/fwlink/?LinkID=288890",
   "title": "Client Runtime for Microsoft Azure Libraries",
@@ -19,6 +19,7 @@
   "frameworks": {
     "net45": {
       "frameworkAssemblies": {
+        "mscorlib": "",
         "System": "",
         "System.Net": "",
         "System.Net.Http": "",
@@ -26,40 +27,83 @@
         "System.Xml": ""
       }
     },
-    ".NETPortable,Version=v4.5,Profile=Profile111": {
+    "netstandard1.1": {
       "compilationOptions": { "define": [ "PORTABLE" ] },
-      "frameworkAssemblies": {
-        "System": "",
-        "System.Collections": "",
-        "System.Diagnostics.Debug": "",
-        "System.Diagnostics.Tools": "",
-        "System.Globalization": "",
-        "System.IO": "",
-        "System.Linq": "",
-        "System.Linq.Expressions": "",
-        "System.Net": "",
-        "System.Net.Http": "",
-        "System.Net.Primitives": "",
-        "System.ObjectModel": "",
-        "System.Reflection": "",
-        "System.Reflection.Extensions": "",
-        "System.Resources.ResourceManager": "",
-        "System.Runtime": "",
-        "System.Runtime.Extensions": "",
-        "System.Runtime.Serialization": "",
-        "System.Text.Encoding": "",
-        "System.Threading": "",
-        "System.Threading.Tasks": "",
-        "System.Xml": "",
-        "System.Xml.XmlSerializer": ""
+      "imports": ["dnxcore50", "portable-net45+win8"],
+      "dependencies": {
+        "Microsoft.NETCore.Platforms": "1.0.1-rc2-23931",
+        "Microsoft.NETCore.Runtime": "1.0.2-rc2-23931",
+        "System.Collections": "4.0.11-rc2-23931",
+        "System.Collections.Concurrent": "4.0.12-rc2-23931",
+        "System.Diagnostics.Debug": "4.0.11-rc2-23931",
+        "System.Diagnostics.Tools": "4.0.1-rc2-23931",
+        "System.Diagnostics.Tracing": "4.1.0-rc2-23931",
+        "System.Globalization": "4.0.11-rc2-23931",
+        "System.IO": "4.1.0-rc2-23931",
+        "System.IO.Compression": "4.1.0-rc2-23931",
+        "System.Linq": "4.1.0-rc2-23931",
+        "System.Linq.Expressions": "4.0.11-rc2-23931",
+        "System.Net.Http": "4.0.1-rc2-23931",
+        "System.Net.Primitives": "4.0.11-rc2-23931",
+        "System.ObjectModel": "4.0.12-rc2-23931",
+        "System.Reflection": "4.1.0-rc2-23931",
+        "System.Reflection.Extensions": "4.0.1-rc2-23931",
+        "System.Reflection.Primitives": "4.0.1-rc2-23931",
+        "System.Resources.ResourceManager": "4.0.1-rc2-23931",
+        "System.Runtime": "4.1.0-rc2-23931",
+        "System.Runtime.Extensions": "4.1.0-rc2-23931",
+        "System.Runtime.InteropServices": "4.1.0-rc2-23931",
+        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-rc2-23931",
+        "System.Runtime.Numerics": "4.0.1-rc2-23931",
+        "System.Text.Encoding": "4.0.11-rc2-23931",
+        "System.Text.Encoding.Extensions": "4.0.11-rc2-23931",
+        "System.Text.RegularExpressions": "4.0.12-rc2-23931",
+        "System.Threading": "4.0.11-rc2-23931",
+        "System.Threading.Tasks": "4.0.11-rc2-23931",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-23931",
+        "System.Xml.XDocument": "4.0.11-rc2-23931"
       }
     },
-    "dnxcore50": {
-      "compilationOptions": { "define": [ "PORTABLE" ] }
+    "netstandard1.5": {
+      "compilationOptions": { "define": [ "PORTABLE" ] },
+      "imports": ["dnxcore50"],
+      "dependencies": {
+        "Microsoft.NETCore.Platforms": "1.0.1-rc2-23931",
+        "Microsoft.NETCore.Runtime": "1.0.2-rc2-23931",
+        "System.Collections": "4.0.11-rc2-23931",
+        "System.Collections.Concurrent": "4.0.12-rc2-23931",
+        "System.Diagnostics.Debug": "4.0.11-rc2-23931",
+        "System.Diagnostics.Tools": "4.0.1-rc2-23931",
+        "System.Diagnostics.Tracing": "4.1.0-rc2-23931",
+        "System.Globalization": "4.0.11-rc2-23931",
+        "System.IO": "4.1.0-rc2-23931",
+        "System.IO.Compression": "4.1.0-rc2-23931",
+        "System.Linq": "4.1.0-rc2-23931",
+        "System.Linq.Expressions": "4.0.11-rc2-23931",
+        "System.Net.Http": "4.0.1-rc2-23931",
+        "System.Net.Primitives": "4.0.11-rc2-23931",
+        "System.ObjectModel": "4.0.12-rc2-23931",
+        "System.Reflection": "4.1.0-rc2-23931",
+        "System.Reflection.Extensions": "4.0.1-rc2-23931",
+        "System.Reflection.Primitives": "4.0.1-rc2-23931",
+        "System.Resources.ResourceManager": "4.0.1-rc2-23931",
+        "System.Runtime": "4.1.0-rc2-23931",
+        "System.Runtime.Extensions": "4.1.0-rc2-23931",
+        "System.Runtime.InteropServices": "4.1.0-rc2-23931",
+        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-rc2-23931",
+        "System.Runtime.Numerics": "4.0.1-rc2-23931",
+        "System.Text.Encoding": "4.0.11-rc2-23931",
+        "System.Text.Encoding.Extensions": "4.0.11-rc2-23931",
+        "System.Text.RegularExpressions": "4.0.12-rc2-23931",
+        "System.Threading": "4.0.11-rc2-23931",
+        "System.Threading.Tasks": "4.0.11-rc2-23931",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-23931",
+        "System.Xml.XDocument": "4.0.11-rc2-23931"
+      }
     }
   },
 
   "dependencies": {
-    "Microsoft.Rest.ClientRuntime": "[2.1.0,3.0)"
+    "Microsoft.Rest.ClientRuntime": "[3.0.0,4.0)"
   }
 }
