--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ClientRuntimes/autorest-clientruntime-for-java"]
 	path = ClientRuntimes/Java
-	url = git@github.com:Azure/autorest-clientruntime-for-java.git
+	url = ../autorest-clientruntime-for-java.git
