Fix FXCopy issues

--- a/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema/AutoRest.Generator.AzureResourceSchema.csproj
+++ b/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema/AutoRest.Generator.AzureResourceSchema.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ResourceProperty.cs" />
-    <Compile Include="Schema.cs" />
+    <Compile Include="ResourceSchema.cs" />
     <Compile Include="AzureResourceSchemaCodeGenerator.cs" />
     <Compile Include="$(SolutionDir)\Tools\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
