--- a/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
+++ b/AutoRest/Generators/Java/Azure.Java/AutoRest.Generator.Azure.Java.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Templates\AzureServiceClientRetrofitTemplate.cs">
       <DependentUpon>AzureServiceClientRetrofitTemplate.cshtml</DependentUpon>
     </Compile>
+    <Compile Include="TypeModels\AzureSequenceTypeModel.cs" />
     <Compile Include="TypeModels\AzureCompositeTypeModel.cs" />
     <Compile Include="TypeModels\AzureResponseModel.cs" />
   </ItemGroup>
