--- a/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema/AutoRest.Generator.AzureResourceSchema.csproj
+++ b/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema/AutoRest.Generator.AzureResourceSchema.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JSONSchema.cs" />
+    <Compile Include="ResourceSchemaModel.cs" />
+    <Compile Include="ResourceSchemaParser.cs" />
+    <Compile Include="ResourceSchemaWriter.cs" />
     <Compile Include="SchemaProperty.cs" />
     <Compile Include="Definition.cs" />
     <Compile Include="ResourceProperty.cs" />
