Address code analysis errors

--- a/AutoRest/Generators/Java/Azure.Java.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
+++ b/AutoRest/Generators/Java/Azure.Java.Fluent/AutoRest.Generator.Azure.Java.Fluent.csproj
@@ -30,6 +30,7 @@
     <Compile Include="AzureJavaFluentCodeNamer.cs" />
     <Compile Include="AzureJavaFluentCodeGenerator.cs" />
     <Compile Include="ClientModelExtensions.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
